--- a/package.json
+++ b/package.json
@@ -19,20 +19,28 @@
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
+    "axios": "^1.5.1",
     "expo": "^49.0.13",
+    "expo-location": "~16.1.0",
+    "expo-speech": "~11.3.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-animatable": "^1.3.3",
     "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-picker": "^7.0.0",
+    "react-native-maps": "1.7.1",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-voice": "^0.3.0",
     "react-navigation": "^5.0.0",
     "react-timer-mixin": "^0.13.4"
   },
