--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "react-native-animatable": "^1.3.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.3",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-picker": "^7.0.0",
     "react-native-maps": "1.7.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
