--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -17,17 +17,21 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-masked-view/masked-view": "^0.2.9",
-    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
     "axios": "^1.5.1",
     "expo": "^49.0.13",
+    "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
     "expo-location": "~16.1.0",
+    "expo-notifications": "~0.20.1",
     "expo-speech": "~11.3.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "native-notify": "^3.2.0",
+    "onesignal-expo-plugin": "^2.0.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-animatable": "^1.3.3",
@@ -39,10 +43,10 @@
     "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
+    "react-native-onesignal": "^5.0.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-voice": "^0.3.0",
     "react-navigation": "^5.0.0",
     "react-timer-mixin": "^0.13.4"
   },
