--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
     "@react-navigation/stack": "^6.3.18",
     "axios": "^1.5.1",
     "expo": "^49.0.13",
+    "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
-    "expo-device": "~5.4.0",
     "expo-location": "~16.1.0",
-    "expo-notifications": "~0.20.1",
     "expo-speech": "~11.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "native-notify": "^3.2.0",
+    "native-notify": "^3.2.3",
     "onesignal-expo-plugin": "^2.0.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
@@ -48,7 +47,9 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-navigation": "^5.0.0",
-    "react-timer-mixin": "^0.13.4"
+    "react-timer-mixin": "^0.13.4",
+    "expo-device": "~5.4.0",
+    "expo-notifications": "~0.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
