--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "expo-speech": "~11.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "native-notify": "^3.2.3",
+
     "onesignal-expo-plugin": "^2.0.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
@@ -42,14 +42,11 @@
     "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
-    "react-native-onesignal": "^5.0.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-navigation": "^5.0.0",
-    "react-timer-mixin": "^0.13.4",
-    "expo-device": "~5.4.0",
-    "expo-notifications": "~0.20.1"
+    "react-timer-mixin": "^0.13.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
